--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,18 @@ server:
 spring:
   application:
     name: swagger-register
+
+logging:
+  path: ./logs
+  level:
+    root: info
+
+---
+spring:
+  profiles: dev
+
+logging:
+  path: /logs
+  level:
+    root: info
+
